# comtext

./: .env.example  .gitignore  CLAUDE.md  FUTURE_WORK.md  README.md  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 5bf046b862c5_add_chunk_embedding_column.py  db76dd0e5888_initial_schema.py
browser-extension/: manifest.json  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
browser-extension/src/: background.ts  config.ts  content.ts  popup.ts
evals/: cases.yaml  test_retrieval.py
src/pce/: cli.py  config.py  main.py
src/pce/agents/: orchestrator.py  roles.py  tools.py
src/pce/api/: routes.py
src/pce/connectors/: browser.py  files.py
src/pce/db/: models.py  session.py
src/pce/ingestion/: chunker.py  embedder.py
src/pce/llm/: router.py
src/pce/retrieval/: search.py
