[project]
name = "pce"
version = "0.1.0"
description = "Personal Context Engine — local-first retrieval over your files, browser, calendar, and email"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "apscheduler>=3.10,<4",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "greenlet>=3.5.0",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
pce = "pce.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "evals"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pce"]
